Fixup 'about' page + put in logo image

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ bio: >
   Value investor. Brooklyn, NY.
 author_image: "/assets/images/author.jpg"
 twitter_username: acouplepercent
-github_username:  acouplepercent
+github_username:  
 
 # Build settings
 markdown: kramdown
